welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:10: error: Boolean does not take parameters
	else (!estFaceMur) {
                           ^